--- a/FTask.Service/FTask.Service.csproj
+++ b/FTask.Service/FTask.Service.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.21.0" />
+    <PackageReference Include="EntityFrameworkCore.Exceptions.SqlServer" Version="6.0.3.2" />
     <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="6.0.22" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="7.0.7" />
   </ItemGroup>
