Add redis cache

--- a/FTask.API/appsettings.json
+++ b/FTask.API/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "MsSQLConnection": "Server=swd2-prn4-instance.c2rlru9yhbus.ap-southeast-2.rds.amazonaws.com;database=FTaskManagement;uid=admin;pwd=12345678;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "MsSQLConnection": "Server=swd2-prn4-instance.c2rlru9yhbus.ap-southeast-2.rds.amazonaws.com;database=FTaskManagement;uid=admin;pwd=12345678;TrustServerCertificate=True;MultipleActiveResultSets=true",
+    "Redis": "localhost:6379"
   },
   "EmailConfig": {
     "From": "vouchersolution.org@gmail.com",
