fix: restore connect string

--- a/FTask.API/appsettings.json
+++ b/FTask.API/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Redis": {
+    "RedisURL": "redis-10484.c292.ap-southeast-1-1.ec2.cloud.redislabs.com:10484,password=12345678"
+  },
+  "ConnectionStrings": {
+    "MsSQLConnection": "Server=swd2-prn4-instance.c2rlru9yhbus.ap-southeast-2.rds.amazonaws.com;database=FTaskManagement;uid=admin;pwd=12345678;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
   "EmailConfig": {
     "From": "vouchersolution.org@gmail.com",
     "SmtpServer": "smtp.gmail.com",
