--- a/FTask.Service/FTask.Service.csproj
+++ b/FTask.Service/FTask.Service.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModel\ResposneVM\" />
+  </ItemGroup>
+
 </Project>
